# locally-uncensored

./: CHANGELOG.md  README.md  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: 404.html  index.html  llms-full.txt  llms.txt  manifest.json  robots.txt  sitemap.xml
docs/assets/: lu.css  lu.js
docs/blog/: abliterated-models-guide.html  best-local-ai-apps-2026.html  best-uncensored-ai-models-2026.html  codex-cli-universal-model-support.html  comfyui-beginners-guide.html  gemma-4-local-guide.html  how-to-generate-ai-videos-locally.html  how-to-run-flux-locally.html  how-to-run-qwen-3-6-locally.html  image-to-image-local-ai.html  index.html  locally-uncensored-v1-5-release.html  locally-uncensored-v2-2-2-release.html  locally-uncensored-v2-3-0-release.html  locally-uncensored-v2-3-1-release.html  locally-uncensored-v2-4-0-release.html  locally-uncensored-vs-gpt4all.html  locally-uncensored-vs-jan.html  locally-uncensored-vs-koboldcpp.html  locally-uncensored-vs-lm-studio.html  locally-uncensored-vs-msty.html  locally-uncensored-vs-open-webui.html  locally-uncensored-vs-sillytavern.html  run-uncensored-ai-locally.html  why-run-ai-locally.html
docs/discord/: index.html
docs/guide/: index.html
docs/remote-access/: index.html
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  state.rs
src-tauri/src/commands/: bg_tasks.rs  gpu.rs  mod.rs  process.rs  proxy.rs  remote.rs  search.rs  secret.rs  system.rs  tts.rs
src/api/: agent-context.ts  agents.ts  backend.ts  comfyui-ws.ts  comfyui.ts  discover.ts  dynamic-workflow.ts  model-pick.ts  ollama.ts  vision-feedback.ts  voice.ts  vram-handoff.ts
src/api/__tests__/: agent-context-workspace.test.ts  backend-urls.test.ts  dynamic-workflow-clip-missing.test.ts  dynamic-workflow-multi-lora.test.ts  model-compatibility.test.ts  model-pick.test.ts  tool-registry.test.ts  vision-feedback.test.ts  vram-handoff.test.ts
src/api/agents/: bg-tasks.ts  repo-map.ts  sub-agent.ts
src/api/mcp/: builtin-tools.ts  types.ts
src/api/providers/: ollama-provider.ts  openai-provider.ts  types.ts
src/hooks/: codexShellGate.ts  useAgent.ts  useAgentChat.ts  useChat.ts  useCodex.ts  useCreate.ts  useModels.ts  useRAG.ts  useVoice.ts  useVramHandoff.ts
src/lib/: agent-commands.ts  chat-tool-intent.ts  constants.ts  loose-tool-parse.ts  model-compatibility.ts  ollama-errors.ts  ragDB.ts  sync-ollama-health.ts  tool-call-repair.ts  tool-selection.ts  workflow-engine.ts
src/stores/: agentStore.ts  benchmarkStore.ts  chatStore.ts  createStore.ts  generationStore.ts  memoryStore.ts  modelPickStore.ts  permissionStore.ts  providerStore.ts  ragStore.ts  settingsStore.ts  voiceStore.ts
src/types/: chat.ts  settings.ts
(+67 files in other folders)
