[package]
name = "locally-uncensored"
version = "2.5.4"
description = "Private, local AI chat & image/video generation"
authors = ["purpledoubled"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream", "blocking", "json", "multipart"] }
zip = "2"
dirs = "6"
regex = "1"
glob = "0.3"
sysinfo = "0.33"
walkdir = "2"
hostname = "0.4"
whoami = "1"
num_cpus = "1"
base64 = "0.22"
tempfile = "3"
futures-util = "0.3"
once_cell = "1"
uuid = { version = "1", features = ["v4", "serde"] }
tokio-util = "0.7"
urlencoding = "2"
url = "2"
rfd = "0.15"
# Remote Access
axum = { version = "0.8", features = ["ws"] }
tokio-tungstenite = "0.26"
tower-http = { version = "0.6", features = ["cors", "fs"] }
jsonwebtoken = "9"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
rand = "0.8"
sha2 = "0.10"
local-ip-address = "0.6"
socket2 = "0.5"
# Structured tracing — used for the JSON-log mode behind `LU_LOG_FORMAT=json`
# (uselu Phase 3 parity). Default formatter is the compact text layer so
# the existing console output stays readable for a desktop user.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_JobObjects", "Win32_System_Threading", "Win32_Foundation", "Win32_Security"] }
# Registry access for LM Studio install-path lookup (Bug #2 — system-wide
# installs in C:\Program Files\LM Studio that techx69 reported on v2.4.3).
winreg = "0.55"

# OS keychain for provider API keys (H5). Windows Credential Manager + macOS
# Keychain only — both backends are built into the OS, so no extra system
# libraries are pulled in. Deliberately NOT on Linux: the secret-service
# backend needs libdbus/gnome-keyring and fails on headless/minimal desktops,
# so Linux keeps the obfuscated-localStorage path (the frontend falls back when
# the secret_* commands report unsupported). default-features off avoids the
# crate's sync-secret-service default.
[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
keyring = { version = "3", default-features = false, features = ["apple-native", "windows-native"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
